--- a/templates - Copy/crfmodelsubmit.html
+++ b/templates - Copy/crfmodelsubmit.html
@@ -36,13 +36,13 @@
                 
                 <h1>Build Own CRF Model</h1>
                 <p>Insert csv file to be train in the CRF model</p>
-                <form method="POST" enctype="multipart/form-data" action ="/crfmodel">
+                <form method="POST" enctype="multipart/form-data" action="/">
                     <input type="file" id="myFile" name="uploaded-file" accept=".csv">
                     <input type="submit" value="Upload file">
                 </form> 
 
                 <br>
-                    <p style="color:blue;">Choose csv file to upload</p>
+                <p style="color:green;">file uploaded successfully</p>
                         <form action="/show_data" target="_blank">
                             <input type="submit" value="Show CSV" />
                         </form>
